// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineWriter .commentLight() prints dimmed comment 1`] = `
Array [
  Array [
    "foo",
  ],
]
`;

exports[`LineWriter .errors() format stack trace 1`] = `
"#   
#   foobar
#   
#   Stack:
#   
#       at Something (../foo/bar.js:10:10)
#       at Foobar (../foo/bar2.js:20:20)"
`;

exports[`LineWriter .failed() colors "not ok" red 1`] = `"{red not ok}"`;

exports[`LineWriter .keyValue() prints key-value pair 1`] = `
Array [
  Array [
    "foo:         bar",
  ],
]
`;

exports[`LineWriter .keyValueList() formats 3-tuple list into a value and calls .keyValue() 1`] = `
Array [
  "foo",
  "name1,styles1,1, name2,styles2,2, name3,styles3,3, name4,styles4,4",
]
`;

exports[`LineWriter .passed() colors "ok" green 1`] = `"{green ok}"`;

exports[`LineWriter .skipped() colors "ok" yellow 1`] = `"{yellow ok}"`;

exports[`LineWriter .snapshots() when all values are greater than zero prints them all 1`] = `
Array [
  "Snapshots",
  "25%  ██▌       , 1 failed, 1 updated, 1 added, 1 passed, 4 total",
]
`;

exports[`LineWriter .start() prints start message 1`] = `
Array [
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "# Starting...",
  ],
]
`;

exports[`LineWriter .start() prints start message with suite number if provided 1`] = `
Array [
  Array [
    "",
  ],
  Array [
    "",
  ],
  Array [
    "# Starting...",
  ],
  Array [
    "# 3 test suites found.",
  ],
]
`;

exports[`LineWriter .stats() when all tests pass shows only passed and total tests 1`] = `
Array [
  "foo",
  "100% ██████████, 1 passed, 1 total",
]
`;

exports[`LineWriter .stats() when some tests are skipped and no tests fail shows only passed, skipped and total tests 1`] = `
Array [
  "foo",
  "50%  █████     , 1 skipped, 1 passed, 2 total",
]
`;

exports[`LineWriter .stats() when some tests are skipped shows all items 1`] = `
Array [
  "foo",
  "33%  ███▍      , 1 failed, 1 skipped, 1 passed, 3 total",
]
`;

exports[`LineWriter .stats() when some tests fail shows only passed, failed and total tests 1`] = `
Array [
  "foo",
  "50%  █████     , 1 failed, 1 passed, 2 total",
]
`;

exports[`LineWriter .stats() when zero tests shows only total zero 1`] = `
Array [
  "foo",
  "0 total",
]
`;

exports[`LineWriter .suite() prints test suite result 1`] = `" FAIL  bar/kappa.js"`;
